--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-config-decent",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "A decent ESLint configuration",
   "main": "./dist/index.cjs",
   "module": "./dist/index.mjs",
@@ -78,7 +78,11 @@
     "eslint-plugin-mocha": "^10.4.3",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-promise": "^6.2.0",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
+    "eslint-plugin-react": "^7.34.2",
+    "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-security": "^3.0.0",
+    "eslint-plugin-testing-library": "^6.2.2",
     "eslint-plugin-unicorn": "^53.0.0",
     "globals": "^15.3.0",
     "typescript-eslint": "^8.0.0-alpha.25"
@@ -96,5 +100,19 @@
     "rimraf": "^5.0.7",
     "typescript": "^5.4.5",
     "unbuild": "2.0.0"
+  },
+  "overrides": {
+    "eslint-plugin-jsx-a11y": {
+      "eslint": "$eslint"
+    },
+    "eslint-plugin-react": {
+      "eslint": "$eslint"
+    },
+    "eslint-plugin-react-hooks": {
+      "eslint": "$eslint"
+    },
+    "eslint-plugin-testing-library": {
+      "eslint": "$eslint"
+    }
   }
 }
