--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-config-decent",
-  "version": "1.2.0",
+  "version": "1.2.1",
   "description": "A decent ESLint configuration",
   "main": "./dist/index.cjs",
   "module": "./dist/index.mjs",
@@ -72,33 +72,33 @@
     "node": ">=20.11.0"
   },
   "dependencies": {
-    "@eslint/js": "^9.4.0",
+    "@eslint/js": "^9.6.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-jsdoc": "^48.2.7",
+    "eslint-plugin-jsdoc": "^48.5.0",
     "eslint-plugin-mocha": "^10.4.3",
     "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-promise": "^6.2.0",
-    "eslint-plugin-jsx-a11y": "^6.8.0",
-    "eslint-plugin-react": "^7.34.2",
+    "eslint-plugin-promise": "^6.4.0",
+    "eslint-plugin-jsx-a11y": "^6.9.0",
+    "eslint-plugin-react": "^7.34.3",
     "eslint-plugin-react-hooks": "^4.6.2",
-    "eslint-plugin-security": "^3.0.0",
+    "eslint-plugin-security": "^3.0.1",
     "eslint-plugin-testing-library": "^6.2.2",
-    "eslint-plugin-unicorn": "^53.0.0",
-    "globals": "^15.3.0",
-    "typescript-eslint": "^8.0.0-alpha.25"
+    "eslint-plugin-unicorn": "^54.0.0",
+    "globals": "^15.7.0",
+    "typescript-eslint": "8.0.0-alpha.29"
   },
   "devDependencies": {
-    "@swc/core": "1.5.24",
+    "@swc/core": "1.6.6",
     "@types/node": ">=20",
-    "eslint": "^9.4.0",
+    "eslint": "^9.6.0",
     "husky": "^9.0.11",
-    "lint-staged": "^15.2.5",
+    "lint-staged": "^15.2.7",
     "markdownlint-cli": "^0.41.0",
     "npm-run-all": "^4.1.5",
     "pinst": "^3.0.0",
-    "prettier": "^3.3.0",
+    "prettier": "^3.3.2",
     "rimraf": "^5.0.7",
-    "typescript": "^5.4.5",
+    "typescript": "^5.5.3",
     "unbuild": "2.0.0"
   },
   "overrides": {
