--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-config-decent",
-  "version": "1.4.2",
+  "version": "1.5.0",
   "description": "A decent ESLint configuration",
   "main": "./dist/index.cjs",
   "module": "./dist/index.mjs",
@@ -75,11 +75,12 @@
     "@eslint/js": "^9.7.0",
     "@typescript-eslint/utils": "8.0.0-alpha.46",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import-x": "^3.0.1",
     "eslint-plugin-jsdoc": "^48.7.0",
+    "eslint-plugin-jsx-a11y": "^6.9.0",
     "eslint-plugin-mocha": "^10.4.3",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-promise": "^6.4.0",
-    "eslint-plugin-jsx-a11y": "^6.9.0",
     "eslint-plugin-react": "^7.34.4",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-security": "^3.0.1",
