--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-config-decent",
-  "version": "2.0.4",
+  "version": "2.1.0",
   "description": "A decent ESLint configuration",
   "main": "./dist/index.cjs",
   "module": "./dist/index.mjs",
@@ -73,29 +73,31 @@
   },
   "dependencies": {
     "@eslint/compat": "1.1.1",
-    "@eslint/js": "^9.8.0",
-    "@typescript-eslint/utils": "8.0.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-import-x": "^3.1.0",
-    "eslint-plugin-jsdoc": "^48.11.0",
-    "eslint-plugin-jsx-a11y": "^6.9.0",
-    "eslint-plugin-mocha": "^10.5.0",
-    "eslint-plugin-prettier": "^5.2.1",
-    "eslint-plugin-promise": "^7.0.0",
-    "eslint-plugin-react": "^7.35.0",
-    "eslint-plugin-react-hooks": "^4.6.2",
-    "eslint-plugin-security": "^3.0.1",
-    "eslint-plugin-testing-library": "^6.2.2",
-    "eslint-plugin-unicorn": "^55.0.0",
-    "globals": "^15.9.0",
-    "typescript-eslint": "8.0.0"
+    "@eslint/js": "9.9.0",
+    "@typescript-eslint/utils": "8.1.0",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-import-x": "3.1.0",
+    "eslint-plugin-jest": "28.8.0",
+    "eslint-plugin-jest-dom": "5.4.0",
+    "eslint-plugin-jsdoc": "50.1.0",
+    "eslint-plugin-jsx-a11y": "6.9.0",
+    "eslint-plugin-mocha": "10.5.0",
+    "eslint-plugin-prettier": "5.2.1",
+    "eslint-plugin-promise": "7.1.0",
+    "eslint-plugin-react": "7.35.0",
+    "eslint-plugin-react-hooks": "4.6.2",
+    "eslint-plugin-security": "3.0.1",
+    "eslint-plugin-testing-library": "6.3.0",
+    "eslint-plugin-unicorn": "55.0.0",
+    "globals": "15.9.0",
+    "typescript-eslint": "8.1.0"
   },
   "devDependencies": {
-    "@swc/core": "1.7.5",
+    "@swc/core": "^1.7.10",
     "@types/node": ">=22",
-    "eslint": "^9.8.0",
+    "eslint": "^9.9.0",
     "husky": "^9.1.4",
-    "lint-staged": "^15.2.7",
+    "lint-staged": "^15.2.9",
     "markdownlint-cli": "^0.41.0",
     "npm-run-all": "^4.1.5",
     "pinst": "^3.0.0",
