--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-config-decent",
-  "version": "2.5.0",
+  "version": "2.6.0",
   "description": "A decent ESLint configuration",
   "main": "./dist/index.cjs",
   "module": "./dist/index.mjs",
@@ -72,10 +72,11 @@
     "node": ">=20.11.0"
   },
   "dependencies": {
-    "@eslint/compat": "1.2.6",
-    "@eslint/js": "9.20.0",
-    "@typescript-eslint/utils": "8.24.0",
+    "@eslint/compat": "1.2.7",
+    "@eslint/js": "9.21.0",
     "@next/eslint-plugin-next": "^15.1.7",
+    "@stylistic/eslint-plugin": "^4.0.1",
+    "@typescript-eslint/utils": "8.24.1",
     "eslint-config-prettier": "10.0.1",
     "eslint-plugin-import-x": "4.6.1",
     "eslint-plugin-jest": "28.11.0",
@@ -89,20 +90,20 @@
     "eslint-plugin-react-hooks": "5.1.0",
     "eslint-plugin-security": "3.0.1",
     "eslint-plugin-testing-library": "7.1.1",
-    "eslint-plugin-unicorn": "56.0.1",
-    "globals": "15.14.0",
-    "typescript-eslint": "8.24.0"
+    "eslint-plugin-unicorn": "57.0.0",
+    "globals": "16.0.0",
+    "typescript-eslint": "8.24.1"
   },
   "devDependencies": {
-    "@swc/core": "^1.10.15",
+    "@swc/core": "^1.10.18",
     "@types/node": ">=22",
-    "eslint": "^9.20.0",
+    "eslint": "^9.21.0",
     "husky": "^9.1.7",
     "lint-staged": "^15.4.3",
     "markdownlint-cli": "^0.44.0",
     "npm-run-all": "^4.1.5",
     "pinst": "^3.0.0",
-    "prettier": "3.4.2",
+    "prettier": "3.5.1",
     "typescript": "^5.7.3",
     "unbuild": "3.3.1"
   },
