Leave engines as a range

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -10,5 +10,9 @@
       matchDepTypes: ['peerDependencies'],
       enabled: false,
     },
+    {
+      matchDepTypes: ['engines'],
+      rangeStrategy: 'replace',
+    },
   ],
 }
