--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -5,6 +5,8 @@
   timezone: 'America/Chicago',
   labels: ['dependencies'],
   rangeStrategy: 'pin',
+  automerge: true,
+  automergeType: 'pr',
   packageRules: [
     {
       matchDepTypes: ['peerDependencies'],
