--- a/package.json
+++ b/package.json
@@ -89,6 +89,12 @@
     "typescript-eslint": "8.29.0"
   },
   "devDependencies": {
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/commit-analyzer": "^13.0.1",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/github": "^11.0.1",
+    "@semantic-release/npm": "^12.0.1",
+    "@semantic-release/release-notes-generator": "^14.0.3",
     "@swc/core": "1.11.16",
     "@types/node": "22.14.0",
     "eslint": "9.24.0",
@@ -98,6 +104,7 @@
     "npm-run-all2": "5.0.0",
     "pinst": "3.0.0",
     "prettier": "3.5.3",
+    "semantic-release": "^24.2.3",
     "typescript": "5.8.3",
     "unbuild": "3.5.0"
   },
