chore: Allow range for @types/node

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -15,5 +15,9 @@
       matchDepTypes: ['engines'],
       rangeStrategy: 'replace',
     },
+    {
+      matchPackageNames: ['@types/node'],
+      rangeStrategy: 'replace',
+    },
   ],
 }
