--- a/package.json
+++ b/package.json
@@ -96,7 +96,7 @@
     "@semantic-release/npm": "12.0.1",
     "@semantic-release/release-notes-generator": "14.0.3",
     "@swc/core": "1.11.16",
-    "@types/node": "22.14.0",
+    "@types/node": ">=22",
     "eslint": "9.24.0",
     "husky": "9.1.7",
     "lint-staged": "15.5.0",
