--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "@next/eslint-plugin-next": "15.3.1",
     "@stylistic/eslint-plugin": "4.2.0",
     "@typescript-eslint/utils": "8.31.1",
+    "@vitest/eslint-plugin": "1.1.44",
     "eslint-config-prettier": "10.1.2",
     "eslint-plugin-import-x": "4.11.0",
     "eslint-plugin-jest": "28.11.0",
