chore: Lint code after updating dependencies

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -20,4 +20,9 @@
       rangeStrategy: 'replace',
     },
   ],
+  postUpgradeTasks: {
+    commands: ['npm ci', 'npm run lint'],
+    fileFilters: ['**/*.{ts,cjs,mjs,md,yml,json5}'],
+    executionMode: 'branch',
+  },
 }
