Allow post upgrade npm commands

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -20,6 +20,7 @@
       rangeStrategy: 'replace',
     },
   ],
+  allowedPostUpgradeCommands: ['^npm ci$', '^npm run lint$'],
   postUpgradeTasks: {
     commands: ['npm ci', 'npm run lint'],
     fileFilters: ['**/*.{ts,cjs,mjs,md,yml,json5}'],
