--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,8 @@
     "useUnknownInCatchVariables": false
   },
   "include": [
-    "src/**/*.ts"
+    "src/**/*.ts",
+    "build.config.ts"
   ],
   "exclude": [
     "node_modules",
