--- a/package.json
+++ b/package.json
@@ -66,47 +66,47 @@
     "node": ">=20.11.0"
   },
   "dependencies": {
-    "@eslint/compat": "1.3.2",
-    "@eslint/js": "9.33.0",
-    "@next/eslint-plugin-next": "15.4.6",
-    "@stylistic/eslint-plugin": "5.2.3",
-    "@typescript-eslint/utils": "8.39.1",
-    "@vitest/eslint-plugin": "1.3.4",
+    "@eslint/compat": "1.4.0",
+    "@eslint/js": "9.36.0",
+    "@next/eslint-plugin-next": "15.5.4",
+    "@stylistic/eslint-plugin": "5.4.0",
+    "@vitest/eslint-plugin": "1.3.15",
     "eslint-config-prettier": "10.1.8",
     "eslint-plugin-import-x": "4.16.1",
     "eslint-plugin-jest": "29.0.1",
     "eslint-plugin-jest-dom": "5.5.0",
-    "eslint-plugin-jsdoc": "54.1.0",
+    "eslint-plugin-jsdoc": "60.7.1",
     "eslint-plugin-jsx-a11y": "6.10.2",
-    "eslint-plugin-mocha": "11.1.0",
+    "eslint-plugin-mocha": "11.2.0",
     "eslint-plugin-prettier": "5.5.4",
     "eslint-plugin-promise": "7.2.1",
     "eslint-plugin-react": "7.37.5",
-    "eslint-plugin-react-hooks": "5.2.0",
+    "eslint-plugin-react-hooks": "6.1.0",
     "eslint-plugin-security": "3.0.1",
-    "eslint-plugin-testing-library": "7.6.6",
-    "eslint-plugin-unicorn": "60.0.0",
-    "globals": "16.3.0",
-    "typescript-eslint": "8.39.1"
+    "eslint-plugin-testing-library": "7.11.0",
+    "eslint-plugin-unicorn": "61.0.2",
+    "globals": "16.4.0",
+    "typescript-eslint": "8.45.0"
   },
   "devDependencies": {
+    "@eslint/config-helpers": "0.4.0",
     "@semantic-release/changelog": "6.0.3",
     "@semantic-release/commit-analyzer": "13.0.1",
     "@semantic-release/git": "10.0.1",
-    "@semantic-release/github": "11.0.4",
+    "@semantic-release/github": "11.0.6",
     "@semantic-release/npm": "12.0.2",
-    "@semantic-release/release-notes-generator": "14.0.3",
-    "@swc/core": "1.13.3",
+    "@semantic-release/release-notes-generator": "14.1.0",
+    "@swc/core": "1.13.5",
     "@types/node": ">=22",
-    "eslint": "9.33.0",
+    "eslint": "9.36.0",
     "husky": "9.1.7",
-    "lint-staged": "16.1.5",
+    "lint-staged": "16.2.3",
     "markdownlint-cli": "0.45.0",
     "npm-run-all2": "8.0.4",
     "pinst": "3.0.0",
     "prettier": "3.6.2",
-    "semantic-release": "24.2.7",
-    "typescript": "5.9.2",
+    "semantic-release": "24.2.9",
+    "typescript": "5.9.3",
     "unbuild": "3.6.1"
   },
   "overrides": {
