--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -1,6 +1,6 @@
 {
   $schema: 'https://docs.renovatebot.com/renovate-schema.json',
-  extends: ['config:recommended', 'group:all', ':semanticCommits', ':maintainLockFilesWeekly'],
+  extends: ['config:recommended', ':semanticCommits', ':maintainLockFilesWeekly'],
   timezone: 'America/Chicago',
   labels: ['dependencies'],
   rangeStrategy: 'pin',
@@ -18,6 +18,17 @@
     {
       matchPackageNames: ['@types/node'],
       rangeStrategy: 'replace',
+    },
+    {
+      matchDepTypes: ['devDependencies'],
+      schedule: ['* 0-4,22-23 * * 1-5', '* * * * 0,6'],
+      groupName: 'dev dependencies',
+      semanticCommitType: 'chore',
+    },
+    {
+      matchDepTypes: ['dependencies'],
+      groupName: 'all dependencies',
+      semanticCommitType: 'fix',
     },
   ],
 }
