--- a/package.json
+++ b/package.json
@@ -65,6 +65,10 @@
   "engines": {
     "node": ">=22.13.0"
   },
+  "peerDependencies": {
+    "eslint": "^9.0.0 || ^10.0.0",
+    "typescript": ">=5.5.0"
+  },
   "dependencies": {
     "@eslint/compat": "2.0.2",
     "@eslint/js": "10.0.1",
@@ -96,6 +100,7 @@
     "@swc/core": "1.15.13",
     "@types/node": ">=22",
     "@typescript/native-preview": "7.0.0-dev.20260225.1",
+    "conventional-changelog-conventionalcommits": "9.1.0",
     "eslint": "10.0.2",
     "husky": "9.1.7",
     "lint-staged": "16.2.7",
